Squashed commit of the following:
commit 2dc88cd51d36212f829298188692b0d35c3c1b36
Author: Jim.Idle <jimi@idle.ws>
Date:   Mon May 13 06:59:37 2024 -0600

    doc: Corrects minor spelling issues

    Signed-off-by: Jim.Idle <jimi@idle.ws>

--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ This grammar was originally an ANTLR v3 grammar, with at most LL(3) token lookah
 to ANTLR v4.
 
 The original grammar used the ANTLR3 AST building techniques and as such, some of the grammar rules
-are a little more verbose and eanded out than they strictly need to be. However, as any serious use
+are a little more verbose and expanded out than they strictly need to be. However, as any serious use
 of this grammar will likely involve some form of AST construction, it makes sense to leave it as is.
 
 The expression rule, which is the basis of much of the otherwise overly verbose SQL language, has
@@ -34,16 +34,16 @@ suffer from being cut-down copies of the normative specs, without regard to the 
 and parsing efficiency.
 
 This was a commercial implementation of TSQL and as such, I consider it high
-quality. It does not suffer from the problems of massive ambiguity and in many cases can parse TSQL
-in SLL mode. The mistake of making ';' generally optional, makes otherwise trivially parsed statements
-more ambiguous than they need to be, but that is a relatively minor issue.
+quality. It does not suffer from the problems of massive specification ambiguity and in many cases
+can parse TSQL in SLL mode. The SQL mistake of making ';' generally optional, makes otherwise trivially
+parsed statements such as `GO` more ambiguous than they need to be, but that is a relatively minor issue.
 
 
 == Compatibility
 
 This grammar is entirely complete with TSQL 2008R2, but since that time, TSQL has been expanded with
-many constructs that woudl need to be added to catch up withthe latest spec. Contributions are welcome,
-however, thy wil need to be written in the same style as the existing grammar, avoiding ambiguity and
+many constructs that would need to be added to catch up with the latest spec. Contributions are welcome,
+however, they will need to be written in the same style as the existing grammar, avoiding ambiguity and
 not just copying the normative spec/BMF.
 
 == LICENSE
